_modules/vpc/vpc.tf
resource "aws_vpc" "vpc_main" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "vpc_main_day2"
  }
}
